lab1/Test/L1-A-3-16.cmm
int kyy1Cr6NF9hWpPJqhD8 ( ) {
  int YOGm == , uqH_bD3Vrs ;
  if ( Vt7XuEh30e5 )   OY ;
else   if ( else Xx9eqit7vhqcGV5gUZyA )   if ( y ) 
      sk ;



  while ( xZsSBH5La2uTD )   jK7RFXk3kGVmK1QF3kr ;

if }
float ;
int JcdgF7eFW0g ( ) {
}
float kc0ZMZXyeQWKpVIrNq8 ( ) {
%}
int a ( ) {
}
float ;
else 